@@ -1,281 +1,319 @@
 // src/main/java/com/algoarena/service/dsa/ApproachService.java
 package com.algoarena.service.dsa;
 
-import com.algoarena.dto.dsa.ApproachDTO;
-import com.algoarena.model.Approach;
+import com.algoarena.dto.dsa.ApproachDetailDTO;
+import com.algoarena.dto.dsa.ApproachMetadataDTO;
+import com.algoarena.exception.ConcurrentModificationException;
+import com.algoarena.model.ProgrammingLanguage;
 import com.algoarena.model.Question;
 import com.algoarena.model.User;
-import com.algoarena.repository.ApproachRepository;
+import com.algoarena.model.UserApproaches;
+import com.algoarena.model.UserApproaches.ApproachData;
 import com.algoarena.repository.QuestionRepository;
+import com.algoarena.repository.UserApproachesRepository;
+import com.algoarena.util.HtmlSanitizer;
+
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.OptimisticLockingFailureException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Map;
-import java.util.HashMap;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class ApproachService {
 
     @Autowired
-    private ApproachRepository approachRepository;
+    private UserApproachesRepository userApproachesRepository;
 
     @Autowired
     private QuestionRepository questionRepository;
 
-    // Constants for limits
-    private static final int MAX_APPROACHES_PER_QUESTION = 3;
-    private static final int MAX_TOTAL_SIZE_PER_USER_PER_QUESTION = 15 * 1024; // 15KB
+    @Autowired
+    private HtmlSanitizer htmlSanitizer;
 
-    // FIXED: Get approach by ID and user (security check)
-    public ApproachDTO getApproachByIdAndUser(String id, String userId) {
-        return approachRepository.findById(id)
-                .filter(approach -> approach.getUser().getId().equals(userId))
-                .map(ApproachDTO::fromEntity)
-                .orElse(null);
-    }
+    private static final int MAX_RETRY_ATTEMPTS = 3;
 
-    // Get approaches by question and user
-    public List<ApproachDTO> getApproachesByQuestionAndUser(String questionId, String userId) {
-        List<Approach> approaches = approachRepository.findByQuestion_IdAndUser_IdOrderByCreatedAtAsc(questionId, userId);
+    // used
+    public List<ApproachMetadataDTO> getMyApproachesForQuestion(String userId, String questionId) {
+        Optional<UserApproaches> userApproachesOpt = userApproachesRepository.findByUserId(userId);
+
+        if (userApproachesOpt.isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        UserApproaches userApproaches = userApproachesOpt.get();
+        List<ApproachData> approaches = userApproaches.getApproachesForQuestion(questionId);
+
         return approaches.stream()
-                .map(ApproachDTO::fromEntity)
-                .toList();
+                .map(data -> new ApproachMetadataDTO(data, userId, userApproaches.getUserName()))
+                .collect(Collectors.toList());
     }
 
-    // UPDATED: Create new approach with count and size validation
-    public ApproachDTO createApproach(String questionId, ApproachDTO approachDTO, User user) {
-        // Find the question
+    // used
+    public ApproachDetailDTO getMyApproachDetail(String userId, String questionId, String approachId) {
+        UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                .orElseThrow(() -> new RuntimeException("No approaches found"));
+
+        ApproachData approach = userApproaches.findApproachById(approachId);
+
+        if (approach == null) {
+            throw new RuntimeException("Approach not found");
+        }
+
+        if (!approach.getQuestionId().equals(questionId)) {
+            throw new RuntimeException("Approach does not belong to this question");
+        }
+
+        return new ApproachDetailDTO(approach, userId, userApproaches.getUserName());
+    }
+
+    // used
+    public ApproachDetailDTO createApproach(String userId, String questionId,
+            ApproachDetailDTO dto, User user) {
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new RuntimeException("Question not found"));
 
-        // Check approach count limit
-        long existingCount = approachRepository.countByQuestion_IdAndUser_Id(questionId, user.getId());
-        if (existingCount >= MAX_APPROACHES_PER_QUESTION) {
-            throw new RuntimeException("Maximum " + MAX_APPROACHES_PER_QUESTION + " approaches allowed per question. You have already submitted " + existingCount + " approaches.");
+        int attempt = 0;
+        while (attempt < MAX_RETRY_ATTEMPTS) {
+            try {
+                UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                        .orElse(new UserApproaches(userId, user.getName()));
+
+                // Validate and normalize language
+                String normalizedLanguage = "java"; // default
+                if (dto.getCodeLanguage() != null && !dto.getCodeLanguage().trim().isEmpty()) {
+                    try {
+                        ProgrammingLanguage.fromString(dto.getCodeLanguage());
+                        normalizedLanguage = dto.getCodeLanguage().toLowerCase().trim();
+                    } catch (IllegalArgumentException e) {
+                        throw new RuntimeException("Invalid programming language: " + dto.getCodeLanguage() +
+                                ". Allowed: java, python, javascript, cpp, c, csharp, go, rust, kotlin, swift, ruby, php, typescript");
+                    }
+                }
+
+                // Sanitize
+                String safeText = htmlSanitizer.sanitizeText(dto.getTextContent());
+                String safeCode = htmlSanitizer.sanitizeCode(dto.getCodeContent());
+
+                ApproachData newApproach = new ApproachData(questionId, safeText);
+                newApproach.setCodeContent(safeCode);
+                newApproach.setCodeLanguage(normalizedLanguage); // ✅ Normalized
+
+                userApproaches.addApproach(questionId, newApproach);
+
+                userApproachesRepository.save(userApproaches);
+
+                System.out.println("✓ Created approach for user: " + user.getName() +
+                        " on question: " + question.getTitle());
+
+                return new ApproachDetailDTO(newApproach, userId, user.getName());
+
+            } catch (OptimisticLockingFailureException e) {
+                attempt++;
+                if (attempt >= MAX_RETRY_ATTEMPTS) {
+                    throw new ConcurrentModificationException();
+                }
+                try {
+                    Thread.sleep(100 * attempt);
+                } catch (InterruptedException ie) {
+                    Thread.currentThread().interrupt();
+                    throw new ConcurrentModificationException();
+                }
+            }
         }
 
-        // Check size limits before creation
-        String textContent = approachDTO.getTextContent();
-        String codeContent = approachDTO.getCodeContent();
-        
-        Map<String, Object> sizeCheck = checkSizeLimits(user.getId(), questionId, textContent, codeContent, null);
-        if (!(Boolean) sizeCheck.get("canAdd")) {
-            int remainingBytes = (Integer) sizeCheck.get("remainingBytes");
-            throw new RuntimeException("Content size limit exceeded. You have " + remainingBytes + " bytes remaining out of " + MAX_TOTAL_SIZE_PER_USER_PER_QUESTION + " bytes total.");
+        throw new ConcurrentModificationException();
+    }
+
+    // used
+    public ApproachDetailDTO updateApproach(String userId, String questionId,
+            String approachId, ApproachDetailDTO dto) {
+        int attempt = 0;
+        while (attempt < MAX_RETRY_ATTEMPTS) {
+            try {
+                UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                        .orElseThrow(() -> new RuntimeException("No approaches found"));
+
+                ApproachData approach = userApproaches.findApproachById(approachId);
+                if (approach == null) {
+                    throw new RuntimeException("Approach not found");
+                }
+                if (!approach.getQuestionId().equals(questionId)) {
+                    throw new RuntimeException("Approach does not belong to this question");
+                }
+
+                // SANITIZE text and code
+                String safeText = dto.getTextContent() != null
+                        ? htmlSanitizer.sanitizeText(dto.getTextContent())
+                        : null;
+                String safeCode = dto.getCodeContent() != null
+                        ? htmlSanitizer.sanitizeCode(dto.getCodeContent())
+                        : null;
+
+                // VALIDATE and NORMALIZE language
+                String safeLanguage = null;
+                if (dto.getCodeLanguage() != null && !dto.getCodeLanguage().trim().isEmpty()) {
+                    try {
+                        ProgrammingLanguage.fromString(dto.getCodeLanguage());
+                        safeLanguage = dto.getCodeLanguage().toLowerCase().trim();
+                    } catch (IllegalArgumentException e) {
+                        throw new RuntimeException("Invalid programming language: " + dto.getCodeLanguage() +
+                                ". Allowed: java, python, javascript, cpp, c, csharp, go, rust, kotlin, swift, ruby, php, typescript");
+                    }
+                }
+
+                userApproaches.updateApproach(approachId, safeText, safeCode, safeLanguage);
+
+                userApproachesRepository.save(userApproaches);
+
+                System.out.println("✓ Updated approach: " + approachId);
+
+                return new ApproachDetailDTO(approach, userId, userApproaches.getUserName());
+
+            } catch (OptimisticLockingFailureException e) {
+                attempt++;
+                if (attempt >= MAX_RETRY_ATTEMPTS) {
+                    throw new ConcurrentModificationException();
+                }
+                try {
+                    Thread.sleep(100 * attempt);
+                } catch (InterruptedException ie) {
+                    Thread.currentThread().interrupt();
+                    throw new ConcurrentModificationException();
+                }
+            }
         }
 
-        Approach approach = new Approach();
-        approach.setQuestion(question);
-        approach.setUser(user);
-        approach.setTextContent(textContent);
-        approach.setCodeContent(codeContent);
-        approach.setCodeLanguage(approachDTO.getCodeLanguage() != null ? 
-                approachDTO.getCodeLanguage() : "javascript");
-
-        // Calculate and set content size
-        int contentSize = calculateContentSize(textContent, codeContent);
-        approach.setContentSize(contentSize);
-
-        Approach savedApproach = approachRepository.save(approach);
-        return ApproachDTO.fromEntity(savedApproach);
+        throw new ConcurrentModificationException();
     }
 
-    // UPDATED: Update approach with size validation
-    public ApproachDTO updateApproach(String id, ApproachDTO approachDTO) {
-        Approach approach = approachRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Approach not found"));
+    // used
+    public void deleteApproach(String userId, String questionId, String approachId) {
+        int attempt = 0;
+        while (attempt < MAX_RETRY_ATTEMPTS) {
+            try {
+                UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                        .orElseThrow(() -> new RuntimeException("No approaches found"));
 
-        // Check size limits for update (excluding current approach)
-        String textContent = approachDTO.getTextContent();
-        String codeContent = approachDTO.getCodeContent();
-        
-        Map<String, Object> sizeCheck = checkSizeLimits(
-            approach.getUser().getId(), 
-            approach.getQuestion().getId(), 
-            textContent, 
-            codeContent, 
-            id
-        );
-        
-        if (!(Boolean) sizeCheck.get("canAdd")) {
-            int remainingBytes = (Integer) sizeCheck.get("remainingBytes");
-            throw new RuntimeException("Content size limit exceeded. You have " + remainingBytes + " bytes remaining out of " + MAX_TOTAL_SIZE_PER_USER_PER_QUESTION + " bytes total.");
+                ApproachData approach = userApproaches.findApproachById(approachId);
+                if (approach == null) {
+                    throw new RuntimeException("Approach not found");
+                }
+                if (!approach.getQuestionId().equals(questionId)) {
+                    throw new RuntimeException("Approach does not belong to this question");
+                }
+
+                userApproaches.removeApproach(questionId, approachId);
+
+                if (userApproaches.getTotalApproaches() == 0) {
+                    userApproachesRepository.delete(userApproaches);
+                    System.out.println("✓ Deleted approach and removed empty document: " + approachId);
+                } else {
+                    userApproachesRepository.save(userApproaches);
+                    System.out.println("✓ Deleted approach: " + approachId);
+                }
+
+                return;
+
+            } catch (OptimisticLockingFailureException e) {
+                attempt++;
+                if (attempt >= MAX_RETRY_ATTEMPTS) {
+                    throw new ConcurrentModificationException();
+                }
+                try {
+                    Thread.sleep(100 * attempt);
+                } catch (InterruptedException ie) {
+                    Thread.currentThread().interrupt();
+                    throw new ConcurrentModificationException();
+                }
+            }
         }
 
-        approach.setTextContent(textContent);
-        approach.setCodeContent(codeContent);
-        if (approachDTO.getCodeLanguage() != null) {
-            approach.setCodeLanguage(approachDTO.getCodeLanguage());
-        }
-
-        // Recalculate content size
-        int contentSize = calculateContentSize(textContent, codeContent);
-        approach.setContentSize(contentSize);
-
-        Approach updatedApproach = approachRepository.save(approach);
-        return ApproachDTO.fromEntity(updatedApproach);
+        throw new ConcurrentModificationException();
     }
 
-    // Delete approach
-    public void deleteApproach(String id) {
-        if (!approachRepository.existsById(id)) {
-            throw new RuntimeException("Approach not found");
-        }
-        approachRepository.deleteById(id);
-    }
+    // used
+    public Map<String, Object> getMyQuestionUsage(String userId, String questionId) {
+        UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                .orElse(null);
 
-    // Count approaches by question and user
-    public long countApproachesByQuestionAndUser(String questionId, String userId) {
-        return approachRepository.countByQuestion_IdAndUser_Id(questionId, userId);
-    }
-
-    // Check size limits (15KB per user per question)
-    public Map<String, Object> checkSizeLimits(String userId, String questionId, 
-                                               String textContent, String codeContent, String excludeApproachId) {
-        Map<String, Object> result = new HashMap<>();
-        
-        // Calculate size of new/updated content
-        int newContentSize = calculateContentSize(textContent, codeContent);
-        
-        // Get existing approaches for this user and question
-        List<Approach> existingApproaches = approachRepository.findByQuestion_IdAndUser_Id(questionId, userId);
-        
-        // Calculate total size of existing approaches (excluding the one being updated)
-        int existingTotalSize = existingApproaches.stream()
-                .filter(approach -> excludeApproachId == null || !approach.getId().equals(excludeApproachId))
-                .mapToInt(Approach::getContentSize)
-                .sum();
-        
-        int totalSizeAfterUpdate = existingTotalSize + newContentSize;
-        int remainingBytes = MAX_TOTAL_SIZE_PER_USER_PER_QUESTION - totalSizeAfterUpdate;
-        
-        result.put("canAdd", totalSizeAfterUpdate <= MAX_TOTAL_SIZE_PER_USER_PER_QUESTION);
-        result.put("currentSize", existingTotalSize);
-        result.put("newSize", newContentSize);
-        result.put("totalSizeAfterUpdate", totalSizeAfterUpdate);
-        result.put("maxAllowedSize", MAX_TOTAL_SIZE_PER_USER_PER_QUESTION);
-        result.put("remainingBytes", Math.max(0, remainingBytes));
-        
-        return result;
-    }
-
-    // NEW: Check both count and size limits for approaches
-    public Map<String, Object> checkApproachLimits(String userId, String questionId, 
-                                                   String textContent, String codeContent, String excludeApproachId) {
-        Map<String, Object> result = new HashMap<>();
-        
-        // Check count limit
-        long existingCount = approachRepository.countByQuestion_IdAndUser_Id(questionId, userId);
-        boolean canAddCount = existingCount < MAX_APPROACHES_PER_QUESTION;
-        
-        // Check size limits
-        Map<String, Object> sizeLimits = checkSizeLimits(userId, questionId, textContent, codeContent, excludeApproachId);
-        boolean canAddSize = (Boolean) sizeLimits.get("canAdd");
-        
-        // Combine results
-        result.put("canAdd", canAddCount && canAddSize);
-        result.put("canAddCount", canAddCount);
-        result.put("canAddSize", canAddSize);
-        result.put("currentCount", existingCount);
-        result.put("maxCount", MAX_APPROACHES_PER_QUESTION);
-        result.put("remainingCount", Math.max(0, MAX_APPROACHES_PER_QUESTION - existingCount));
-        
-        // Include size information
-        result.putAll(sizeLimits);
-        
-        return result;
-    }
-
-    // Calculate content size in bytes
-    private int calculateContentSize(String textContent, String codeContent) {
-        int size = 0;
-        if (textContent != null) {
-            size += textContent.getBytes().length;
-        }
-        if (codeContent != null) {
-            size += codeContent.getBytes().length;
-        }
-        return size;
-    }
-
-    // Get approaches by user
-    public List<ApproachDTO> getApproachesByUser(String userId) {
-        List<Approach> approaches = approachRepository.findByUser_Id(userId);
-        return approaches.stream()
-                .map(ApproachDTO::fromEntity)
-                .toList();
-    }
-
-    // Get recent approaches by user
-    public List<ApproachDTO> getRecentApproachesByUser(String userId) {
-        List<Approach> approaches = approachRepository.findTop10ByUser_IdOrderByUpdatedAtDesc(userId);
-        return approaches.stream()
-                .map(ApproachDTO::fromEntity)
-                .toList();
-    }
-
-    // Get user's approach statistics
-    public Map<String, Object> getUserApproachStats(String userId) {
-        Map<String, Object> stats = new HashMap<>();
-        
-        // Total approaches
-        long totalApproaches = approachRepository.countByUser_Id(userId);
-        stats.put("totalApproaches", totalApproaches);
-        
-        // Total content size
-        List<Approach> userApproaches = approachRepository.findByUser_Id(userId);
-        int totalContentSize = userApproaches.stream()
-                .mapToInt(Approach::getContentSize)
-                .sum();
-        stats.put("totalContentSize", totalContentSize);
-        stats.put("totalContentSizeKB", totalContentSize / 1024.0);
-        
-        // Approaches by question
-        Map<String, Integer> approachsByQuestion = new HashMap<>();
-        userApproaches.forEach(approach -> {
-            String questionId = approach.getQuestion().getId();
-            approachsByQuestion.put(questionId, approachsByQuestion.getOrDefault(questionId, 0) + 1);
-        });
-        stats.put("approachesByQuestion", approachsByQuestion);
-        
-        return stats;
-    }
-
-    // Get size usage for a user on a specific question
-    public Map<String, Object> getUserQuestionSizeUsage(String userId, String questionId) {
         Map<String, Object> usage = new HashMap<>();
-        
-        List<Approach> approaches = approachRepository.findByQuestion_IdAndUser_Id(questionId, userId);
-        
-        int totalUsed = approaches.stream()
-                .mapToInt(Approach::getContentSize)
-                .sum();
-        
-        int remaining = MAX_TOTAL_SIZE_PER_USER_PER_QUESTION - totalUsed;
-        
-        usage.put("totalUsed", totalUsed);
-        usage.put("totalUsedKB", totalUsed / 1024.0);
-        usage.put("remaining", Math.max(0, remaining));
-        usage.put("remainingKB", Math.max(0, remaining) / 1024.0);
-        usage.put("maxAllowed", MAX_TOTAL_SIZE_PER_USER_PER_QUESTION);
-        usage.put("maxAllowedKB", MAX_TOTAL_SIZE_PER_USER_PER_QUESTION / 1024.0);
-        usage.put("usagePercentage", (totalUsed * 100.0) / MAX_TOTAL_SIZE_PER_USER_PER_QUESTION);
-        usage.put("approachCount", approaches.size());
-        usage.put("maxApproaches", MAX_APPROACHES_PER_QUESTION);
-        
+
+        if (userApproaches == null) {
+            usage.put("usedBytes", 0);
+            usage.put("usedKB", 0.0);
+            usage.put("remainingBytes", UserApproaches.MAX_COMBINED_SIZE_PER_QUESTION_BYTES);
+            usage.put("remainingKB", 15.0);
+            usage.put("approachCount", 0);
+            usage.put("remainingSlots", 3);
+            return usage;
+        }
+
+        int totalSize = userApproaches.getTotalSizeForQuestion(questionId);
+        int remaining = userApproaches.getRemainingBytesForQuestion(questionId);
+        int count = userApproaches.getApproachCountForQuestion(questionId);
+
+        usage.put("usedBytes", totalSize);
+        usage.put("usedKB", totalSize / 1024.0);
+        usage.put("remainingBytes", remaining);
+        usage.put("remainingKB", remaining / 1024.0);
+        usage.put("approachCount", count);
+        usage.put("remainingSlots", UserApproaches.MAX_APPROACHES_PER_QUESTION - count);
+        usage.put("maxBytes", UserApproaches.MAX_COMBINED_SIZE_PER_QUESTION_BYTES);
+        usage.put("maxKB", 15.0);
+
         return usage;
     }
 
-    // Delete all approaches for a question (used when question is deleted)
     public void deleteAllApproachesForQuestion(String questionId) {
-        approachRepository.deleteByQuestion_Id(questionId);
+        List<UserApproaches> allUsers = userApproachesRepository.findAll();
+
+        int deletedCount = 0;
+        for (UserApproaches userApproaches : allUsers) {
+            List<ApproachData> approaches = userApproaches.getApproachesForQuestion(questionId);
+
+            if (!approaches.isEmpty()) {
+                for (ApproachData approach : new ArrayList<>(approaches)) {
+                    userApproaches.removeApproach(questionId, approach.getId());
+                    deletedCount++;
+                }
+
+                if (userApproaches.getTotalApproaches() == 0) {
+                    userApproachesRepository.delete(userApproaches);
+                } else {
+                    userApproachesRepository.save(userApproaches);
+                }
+            }
+        }
+
+        System.out.println("✓ Deleted " + deletedCount + " approaches for question: " + questionId);
     }
 
-    // Delete all approaches by a user for a specific question
+    // used by admins
     public void deleteAllApproachesByUserForQuestion(String userId, String questionId) {
-        approachRepository.deleteByQuestion_IdAndUser_Id(questionId, userId);
+        UserApproaches userApproaches = userApproachesRepository.findByUserId(userId)
+                .orElse(null);
+
+        if (userApproaches == null) {
+            return; // No approaches to delete
+        }
+
+        List<ApproachData> approaches = userApproaches.getApproachesForQuestion(questionId);
+
+        for (ApproachData approach : new ArrayList<>(approaches)) {
+            userApproaches.removeApproach(questionId, approach.getId());
+        }
+
+        if (userApproaches.getTotalApproaches() == 0) {
+            userApproachesRepository.delete(userApproaches);
+        } else {
+            userApproachesRepository.save(userApproaches);
+        }
+
+        System.out.println("✓ Deleted " + approaches.size() + " approaches by user " +
+                userId + " for question: " + questionId);
     }
 }
