@@ -1,35 +1,35 @@
-// src/main/java/com/algoarena/service/dsa/QuestionService.java - FIXED APPROACH COUNT LOGIC
-
+// src/main/java/com/algoarena/service/dsa/QuestionService.java
 package com.algoarena.service.dsa;
 
+import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.dao.OptimisticLockingFailureException;
+
+import com.algoarena.dto.dsa.AdminQuestionSummaryDTO;
 import com.algoarena.dto.dsa.QuestionDTO;
-import com.algoarena.dto.dsa.QuestionDetailDTO;
-import com.algoarena.dto.dsa.QuestionSummaryDTO;
-import com.algoarena.dto.dsa.SolutionDTO;
-import com.algoarena.model.Question;
+import com.algoarena.dto.user.QuestionsMetadataDTO;
 import com.algoarena.model.QuestionLevel;
+import com.algoarena.model.Solution;
+import com.algoarena.model.Question;
 import com.algoarena.model.User;
-import com.algoarena.model.UserProgress;
-import com.algoarena.model.Category;
 import com.algoarena.repository.QuestionRepository;
 import com.algoarena.repository.CategoryRepository;
 import com.algoarena.repository.SolutionRepository;
-import com.algoarena.repository.ApproachRepository;
-import com.algoarena.repository.UserProgressRepository;
+import com.algoarena.service.file.CloudinaryService;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.aggregation.Aggregation;
+import org.springframework.data.mongodb.core.aggregation.AggregationResults;
+import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.HashMap;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -45,260 +45,249 @@ public class QuestionService {
     private SolutionRepository solutionRepository;
 
     @Autowired
-    private ApproachRepository approachRepository;
-
-    @Autowired
-    private UserProgressRepository userProgressRepository;
-
-    @Autowired
     private SolutionService solutionService;
+
+    @Autowired
+    private CloudinaryService cloudinaryService;
 
     @Autowired
     private UserProgressService userProgressService;
 
     @Autowired
-    private BulkApproachService bulkApproachService;
+    private CategoryService categoryService;
 
-    // ==================== HYBRID CACHING METHODS ====================
+    @Autowired
+    private ApproachService approachService;
 
-    /**
-     * HYBRID: Get questions summary with user progress - CACHED with smart eviction
-     * Cache key includes all filter parameters for proper cache segmentation
-     */
-    @Cacheable(value = "questionsSummary", key = "#userId + '_page_' + #pageable.pageNumber + '_size_' + #pageable.pageSize + '_cat_' + (#categoryId ?: 'all') + '_lvl_' + (#level ?: 'all') + '_search_' + (#search ?: 'none')")
-    public Page<QuestionSummaryDTO> getQuestionsWithProgress(
-            Pageable pageable,
-            String categoryId,
-            String level,
-            String search,
-            String userId) {
+    @Autowired
+    private MongoTemplate mongoTemplate;
 
-        // System.out.println("CACHE MISS: Fetching fresh questions data for user: " + userId);
-
-        // Step 1: Get questions with filtering
-        Page<Question> questionsPage = getAllQuestionsFiltered(pageable, categoryId, level, search);
-
-        // Step 2: Get all question IDs from the page
-        List<String> questionIds = questionsPage.getContent()
-                .stream()
-                .map(Question::getId)
-                .collect(Collectors.toList());
-
-        if (questionIds.isEmpty()) {
-            return new PageImpl<>(List.of(), pageable, 0);
+    @CacheEvict(value = { "globalCategories", "adminQuestionsSummary", "questionsMetadata" }, allEntries = true)
+    @Transactional
+    public QuestionDTO createQuestion(QuestionDTO questionDTO, User currentUser) {
+        if (questionRepository.existsByTitleIgnoreCase(questionDTO.getTitle())) {
+            throw new RuntimeException("Question with this title already exists");
         }
 
-        // Step 3: Get user progress for these questions (optimized)
-        Map<String, UserProgress> progressMap = new HashMap<>();
-        for (String questionId : questionIds) {
-            Optional<UserProgress> progress = userProgressRepository.findByUser_IdAndQuestion_Id(userId, questionId);
-            if (progress.isPresent()) {
-                progressMap.put(questionId, progress.get());
-            }
+        if (!categoryRepository.existsById(questionDTO.getCategoryId())) {
+            throw new RuntimeException("Category not found with id: " + questionDTO.getCategoryId());
         }
-
-        // System.out.println(
-        //         "DEBUG: Found " + progressMap.size() + " progress records out of " + questionIds.size() + " questions");
-
-        // Step 4: TRULY BULK - Get approach counts using single aggregation query
-        // System.out.println("DEBUG: Using bulk approach count service for " + questionIds.size() + " questions for user: " + userId);
-        
-        Map<String, Integer> approachCountMap = bulkApproachService.getBulkApproachCounts(userId, questionIds);
-        
-        // Log detailed results
-        // int totalApproaches = approachCountMap.values().stream().mapToInt(Integer::intValue).sum();
-        // int questionsWithApproaches = (int) approachCountMap.values().stream().filter(count -> count > 0).count();
-        
-        // System.out.println("BULK RESULT: Found total of " + totalApproaches + " approaches across " + 
-        //                  questionsWithApproaches + " questions (out of " + questionIds.size() + " total questions)");
-
-        // Step 5: Convert to QuestionSummaryDTO with embedded user progress and approach counts
-        List<QuestionSummaryDTO> summaryList = questionsPage.getContent()
-                .stream()
-                .map(question -> {
-                    QuestionSummaryDTO summary = new QuestionSummaryDTO(
-                            question.getId(),
-                            question.getTitle(),
-                            question.getCategory().getId(),
-                            question.getCategory().getName(),
-                            question.getLevel(),
-                            question.getCreatedAt());
-
-                    // Add user progress
-                    UserProgress progress = progressMap.get(question.getId());
-                    int approachCount = approachCountMap.getOrDefault(question.getId(), 0);
-
-                    if (progress != null && progress.isSolved()) {
-                        summary.setUserProgress(new QuestionSummaryDTO.UserProgressSummary(
-                                true,
-                                progress.getSolvedAt(),
-                                approachCount));
-                    } else {
-                        summary.setUserProgress(new QuestionSummaryDTO.UserProgressSummary(
-                                false,
-                                null,
-                                approachCount));
-                    }
-
-                    return summary;
-                })
-                .collect(Collectors.toList());
-
-        // Return paginated result
-        return new PageImpl<>(summaryList, pageable, questionsPage.getTotalElements());
-    }
-
-    /**
-     * Helper method to get filtered questions (can be cached separately)
-     */
-    @Cacheable(value = "questionsList", key = "'page_' + #pageable.pageNumber + '_size_' + #pageable.pageSize + '_cat_' + (#categoryId ?: 'all') + '_lvl_' + (#level ?: 'all') + '_search_' + (#search ?: 'none')")
-    public Page<Question> getAllQuestionsFiltered(Pageable pageable, String categoryId, String level, String search) {
-        // System.out.println("CACHE MISS: Fetching filtered questions from database");
-
-        Page<Question> questions;
-
-        if (search != null && !search.trim().isEmpty()) {
-            List<Question> searchResults = questionRepository.searchByTitleOrStatement(search.trim());
-            int start = (int) pageable.getOffset();
-            int end = Math.min((start + pageable.getPageSize()), searchResults.size());
-            List<Question> pageContent = searchResults.subList(start, end);
-            questions = new PageImpl<>(pageContent, pageable, searchResults.size());
-        } else if (categoryId != null && !categoryId.isEmpty()) {
-            if (level != null && !level.isEmpty()) {
-                QuestionLevel questionLevel = QuestionLevel.fromString(level);
-                List<Question> filteredQuestions = questionRepository.findByCategory_IdAndLevel(categoryId,
-                        questionLevel);
-                int start = (int) pageable.getOffset();
-                int end = Math.min((start + pageable.getPageSize()), filteredQuestions.size());
-                List<Question> pageContent = filteredQuestions.subList(start, end);
-                questions = new PageImpl<>(pageContent, pageable, filteredQuestions.size());
-            } else {
-                questions = questionRepository.findByCategory_Id(categoryId, pageable);
-            }
-        } else if (level != null && !level.isEmpty()) {
-            QuestionLevel questionLevel = QuestionLevel.fromString(level);
-            List<Question> filteredQuestions = questionRepository.findByLevel(questionLevel);
-            int start = (int) pageable.getOffset();
-            int end = Math.min((start + pageable.getPageSize()), filteredQuestions.size());
-            List<Question> pageContent = filteredQuestions.subList(start, end);
-            questions = new PageImpl<>(pageContent, pageable, filteredQuestions.size());
-        } else {
-            questions = questionRepository.findAllByOrderByCreatedAtDesc(pageable);
-        }
-
-        return questions;
-    }
-
-    // ==================== CRUD OPERATIONS WITH PROPER CACHE EVICTION ====================
-
-    /**
-     * Create question with PROPER cache eviction using @CacheEvict
-     */
-    @CacheEvict(value = { "questionsSummary", "questionsList", "categoriesProgress", "adminStats" }, allEntries = true)
-    public QuestionDTO createQuestion(QuestionDTO questionDTO, User createdBy) {
-        // Find category
-        Category category = categoryRepository.findById(questionDTO.getCategoryId())
-                .orElseThrow(() -> new RuntimeException("Category not found"));
 
         Question question = new Question();
-        question.setTitle(questionDTO.getTitle().trim());
+        question.setTitle(questionDTO.getTitle());
         question.setStatement(questionDTO.getStatement());
         question.setImageUrls(questionDTO.getImageUrls());
-        question.setCategory(category);
-        question.setLevel(questionDTO.getLevel());
-        question.setCreatedBy(createdBy);
+        question.setImageFolderUrl(questionDTO.getImageFolderUrl());
 
         if (questionDTO.getCodeSnippets() != null) {
-            List<Question.CodeSnippet> codeSnippets = questionDTO.getCodeSnippets().stream()
-                    .map(dto -> new Question.CodeSnippet(dto.getLanguage(), dto.getCode(), dto.getDescription()))
-                    .collect(Collectors.toList());
-            question.setCodeSnippets(codeSnippets);
+            List<Question.CodeSnippet> snippets = questionDTO.getCodeSnippets().stream()
+                    .map(dto -> {
+                        Question.CodeSnippet snippet = new Question.CodeSnippet();
+                        snippet.setLanguage(dto.getLanguage());
+                        snippet.setCode(dto.getCode());
+                        snippet.setDescription(dto.getDescription());
+                        return snippet;
+                    })
+                    .toList();
+            question.setCodeSnippets(snippets);
         }
+
+        question.setCategoryId(questionDTO.getCategoryId());
+        question.setLevel(questionDTO.getLevel());
+
+        if (questionDTO.getDisplayOrder() != null) {
+            question.setDisplayOrder(questionDTO.getDisplayOrder());
+        } else {
+            Integer maxOrder = questionRepository.findTop1ByCategoryIdAndLevelOrderByDisplayOrderDesc(
+                    questionDTO.getCategoryId(),
+                    questionDTO.getLevel())
+                    .map(Question::getDisplayOrder)
+                    .orElse(0);
+            question.setDisplayOrder(maxOrder + 1);
+        }
+
+        question.setCreatedById(currentUser.getId());
+        question.setCreatedByName(currentUser.getName());
+        question.setCreatedAt(LocalDateTime.now());
+        question.setUpdatedAt(LocalDateTime.now());
 
         Question savedQuestion = questionRepository.save(question);
 
-        // System.out.println("Question created and ALL relevant caches evicted");
+        categoryService.addQuestionToCategory(
+                savedQuestion.getCategoryId(),
+                savedQuestion.getId(),
+                savedQuestion.getLevel());
+
+        System.out.println("✓ Created question: " + savedQuestion.getTitle());
 
         return QuestionDTO.fromEntity(savedQuestion);
     }
 
-    /**
-     * Update question with PROPER cache eviction using @CacheEvict
-     */
-    @CacheEvict(value = { "questionsSummary", "questionsList", "categoriesProgress", "adminStats" }, allEntries = true)
+    @CacheEvict(value = { "globalCategories", "adminQuestionsSummary", "questionsMetadata",
+            "questionDetail" }, allEntries = true)
+    @Transactional
     public QuestionDTO updateQuestion(String id, QuestionDTO questionDTO) {
         Question question = questionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Question not found"));
+                .orElseThrow(() -> new RuntimeException("Question not found with id: " + id));
 
-        // Find category if changed
-        if (!question.getCategory().getId().equals(questionDTO.getCategoryId())) {
-            Category newCategory = categoryRepository.findById(questionDTO.getCategoryId())
-                    .orElseThrow(() -> new RuntimeException("Category not found"));
-            question.setCategory(newCategory);
+        if (!question.getTitle().equals(questionDTO.getTitle()) &&
+                questionRepository.existsByTitleIgnoreCase(questionDTO.getTitle())) {
+            throw new RuntimeException("Question with this title already exists");
         }
 
-        question.setTitle(questionDTO.getTitle().trim());
+        if (!question.getCategoryId().equals(questionDTO.getCategoryId())) {
+            if (!categoryRepository.existsById(questionDTO.getCategoryId())) {
+                throw new RuntimeException("Category not found with id: " + questionDTO.getCategoryId());
+            }
+        }
+
+        if (questionDTO.getVersion() != null && !questionDTO.getVersion().equals(question.getVersion())) {
+            throw new OptimisticLockingFailureException(
+                    "Question was modified by another user. Please refresh and try again.");
+        }
+
+        String oldCategoryId = question.getCategoryId();
+        QuestionLevel oldLevel = question.getLevel();
+
+        question.setTitle(questionDTO.getTitle());
         question.setStatement(questionDTO.getStatement());
         question.setImageUrls(questionDTO.getImageUrls());
-        question.setLevel(questionDTO.getLevel());
+        question.setImageFolderUrl(questionDTO.getImageFolderUrl());
 
         if (questionDTO.getCodeSnippets() != null) {
-            List<Question.CodeSnippet> codeSnippets = questionDTO.getCodeSnippets().stream()
-                    .map(dto -> new Question.CodeSnippet(dto.getLanguage(), dto.getCode(), dto.getDescription()))
-                    .collect(Collectors.toList());
-            question.setCodeSnippets(codeSnippets);
+            List<Question.CodeSnippet> snippets = questionDTO.getCodeSnippets().stream()
+                    .map(dto -> {
+                        Question.CodeSnippet snippet = new Question.CodeSnippet();
+                        snippet.setLanguage(dto.getLanguage());
+                        snippet.setCode(dto.getCode());
+                        snippet.setDescription(dto.getDescription());
+                        return snippet;
+                    })
+                    .toList();
+            question.setCodeSnippets(snippets);
         }
+
+        boolean categoryChanged = !oldCategoryId.equals(questionDTO.getCategoryId());
+        boolean levelChanged = oldLevel != questionDTO.getLevel();
+
+        if (categoryChanged || levelChanged) {
+            question.setCategoryId(questionDTO.getCategoryId());
+            question.setLevel(questionDTO.getLevel());
+
+            categoryService.moveQuestion(
+                    oldCategoryId,
+                    question.getCategoryId(),
+                    question.getId(),
+                    oldLevel,
+                    question.getLevel());
+        }
+
+        if (questionDTO.getDisplayOrder() != null) {
+            question.setDisplayOrder(questionDTO.getDisplayOrder());
+        }
+
+        question.setUpdatedAt(LocalDateTime.now());
 
         Question updatedQuestion = questionRepository.save(question);
 
-        // System.out.println("Question updated and ALL relevant caches evicted");
+        System.out.println("✓ Updated question: " + updatedQuestion.getTitle());
 
         return QuestionDTO.fromEntity(updatedQuestion);
     }
 
-    /**
-     * Delete question with PROPER cache eviction using @CacheEvict
-     */
-    @CacheEvict(value = { "questionsSummary", "questionsList", "categoriesProgress", "adminStats" }, allEntries = true)
+    // adminQuestionsSummary,\
+    // adminSolutionsSummary,\
+    // globalCategories,\
+    // userMeStats,\
+    // questionsMetadata,\
+    // questionDetail,\
+    // questionSolutions,\
+    // solutionDetail,\
+    // courseTopic,\
+    // courseDocsList,\
+    // courseDoc,\
+    // topicNamesPublic,\
+    // topicNamesAdmin
+
+    @CacheEvict(value = { "globalCategories", "adminQuestionsSummary", "questionsMetadata",
+            "questionDetail", "userMeStats", "adminSolutionsSummary", "solutionDetail",
+            "questionSolutions" }, allEntries = true)
     @Transactional
     public void deleteQuestion(String id) {
-        // Delete all related data
-        solutionRepository.deleteByQuestion_Id(id);
-        approachRepository.deleteByQuestion_Id(id);
-        userProgressRepository.deleteByQuestion_Id(id);
+        Question question = questionRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Question not found with id: " + id));
 
-        // Delete the question
-        questionRepository.deleteById(id);
+        // ✅ STEP 1: Delete all solutions (with their images and visualizers)
+        List<Solution> solutions = solutionRepository.findByQuestionId(id);
+        System.out.println("Deleting " + solutions.size() + " solutions for question...");
 
-        // System.out.println("Question deleted and ALL relevant caches evicted");
-    }
-
-    // ==================== EXISTING METHODS ====================
-
-    public Page<QuestionDTO> getAllQuestions(Pageable pageable, String categoryId, String level, String search) {
-        Page<Question> questions = getAllQuestionsFiltered(pageable, categoryId, level, search);
-        return questions.map(QuestionDTO::fromEntity);
-    }
-
-    public QuestionDetailDTO getQuestionDetails(String questionId, String userId) {
-        Question question = questionRepository.findById(questionId).orElse(null);
-        if (question == null) {
-            return null;
+        for (Solution solution : solutions) {
+            // This will now properly delete solution images and visualizers
+            solutionService.deleteSolution(solution.getId());
         }
 
-        QuestionDTO questionDTO = QuestionDTO.fromEntity(question);
-        List<SolutionDTO> solutions = solutionService.getSolutionsByQuestion(questionId);
+        // ✅ STEP 2: Delete question's own images
+        if (question.getImageUrls() != null && !question.getImageUrls().isEmpty()) {
+            System.out.println("Deleting " + question.getImageUrls().size() + " images from question...");
 
-        var userProgress = userProgressService.getProgressByQuestionAndUser(questionId, userId);
-        boolean solved = userProgress != null ? userProgress.isSolved() : false;
-        var solvedAt = userProgress != null ? userProgress.getSolvedAt() : null;
+            for (String imageUrl : question.getImageUrls()) {
+                try {
+                    String publicId = extractPublicIdFromUrl(imageUrl);
+                    cloudinaryService.deleteImage(publicId);
+                    System.out.println("  ✓ Deleted image: " + publicId);
+                } catch (Exception e) {
+                    System.err.println("  ✗ Failed to delete image: " + e.getMessage());
+                }
+            }
+        }
 
-        return new QuestionDetailDTO(questionDTO, solutions, solved, solvedAt);
+        // ✅ STEP 3: Remove from category
+        categoryService.removeQuestionFromCategory(
+                question.getCategoryId(),
+                question.getId(),
+                question.getLevel());
+
+        // ✅ STEP 4: Delete approaches
+        approachService.deleteAllApproachesForQuestion(id);
+
+        // ✅ STEP 5: Remove from user progress
+        int removedFromUsers = userProgressService.removeQuestionFromAllUsers(id);
+        System.out.println("✓ Removed from " + removedFromUsers + " users' progress");
+
+        // ✅ STEP 6: Delete question from database
+        questionRepository.deleteById(id);
+        System.out.println("✓ Deleted question: " + question.getTitle());
     }
 
-    public Page<QuestionDTO> getQuestionsByCategory(String categoryId, Pageable pageable) {
-        Page<Question> questions = questionRepository.findByCategory_IdOrderByCreatedAtDesc(categoryId, pageable);
-        return questions.map(QuestionDTO::fromEntity);
+    /**
+     * Helper method to extract Cloudinary public ID from URL
+     */
+    private String extractPublicIdFromUrl(String imageUrl) {
+        if (imageUrl == null || !imageUrl.contains("cloudinary.com")) {
+            throw new IllegalArgumentException("Invalid Cloudinary URL");
+        }
+
+        try {
+            int uploadIndex = imageUrl.indexOf("/upload/");
+            if (uploadIndex == -1) {
+                throw new IllegalArgumentException("Invalid Cloudinary URL format");
+            }
+
+            String afterUpload = imageUrl.substring(uploadIndex + 8);
+
+            if (afterUpload.startsWith("v") && afterUpload.indexOf("/") > 0) {
+                afterUpload = afterUpload.substring(afterUpload.indexOf("/") + 1);
+            }
+
+            int dotIndex = afterUpload.lastIndexOf(".");
+            if (dotIndex > 0) {
+                return afterUpload.substring(0, dotIndex);
+            }
+
+            return afterUpload;
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Failed to extract public ID: " + e.getMessage());
+        }
     }
 
     public boolean existsById(String id) {
@@ -309,50 +298,111 @@ public class QuestionService {
         return questionRepository.existsByTitleIgnoreCase(title);
     }
 
-    public boolean existsByTitleAndNotId(String title, String excludeId) {
-        var questions = questionRepository.findByTitleContainingIgnoreCase(title);
-        return questions.stream().anyMatch(q -> q.getTitle().equalsIgnoreCase(title) && !q.getId().equals(excludeId));
+    @Cacheable(value = "adminQuestionsSummary", key = "'page_' + #pageable.pageNumber + '_size_' + #pageable.pageSize")
+    public Page<AdminQuestionSummaryDTO> getAdminQuestionsSummary(Pageable pageable) {
+        System.out.println("CACHE MISS: Fetching admin questions summary from database");
+
+        Page<Question> questions = questionRepository.findAllByOrderByCreatedAtDesc(pageable);
+
+        // OPTIMIZATION: Fetch all solution counts in ONE query
+        List<String> questionIds = questions.getContent().stream()
+                .map(Question::getId)
+                .toList();
+
+        Map<String, Integer> solutionCounts = getSolutionCountsForQuestions(questionIds);
+
+        return questions.map(question -> {
+            AdminQuestionSummaryDTO dto = new AdminQuestionSummaryDTO();
+            dto.setId(question.getId());
+            dto.setTitle(question.getTitle());
+            dto.setLevel(question.getLevel());
+            dto.setCategoryId(question.getCategoryId());
+            dto.setDisplayOrder(question.getDisplayOrder());
+            dto.setImageCount(question.getImageUrls() != null ? question.getImageUrls().size() : 0);
+            dto.setHasCodeSnippets(question.getCodeSnippets() != null && !question.getCodeSnippets().isEmpty());
+            dto.setCreatedByName(question.getCreatedByName());
+            dto.setUpdatedAt(question.getUpdatedAt());
+            dto.setSolutionCount(solutionCounts.getOrDefault(question.getId(), 0)); // FIXED
+
+            return dto;
+        });
     }
 
-    @Cacheable(value = "adminStats", key = "'questionCounts'")
-    public Map<String, Object> getQuestionCounts() {
-        // System.out.println("CACHE MISS: Fetching question counts from database");
-
-        Map<String, Object> counts = new HashMap<>();
-
-        long totalQuestions = questionRepository.count();
-        counts.put("total", totalQuestions);
-
-        Map<String, Long> levelCounts = new HashMap<>();
-        levelCounts.put("easy", questionRepository.countByLevel(QuestionLevel.EASY));
-        levelCounts.put("medium", questionRepository.countByLevel(QuestionLevel.MEDIUM));
-        levelCounts.put("hard", questionRepository.countByLevel(QuestionLevel.HARD));
-        counts.put("byLevel", levelCounts);
-
-        List<Category> categories = categoryRepository.findAll();
-        Map<String, Object> categoryStats = new HashMap<>();
-        for (Category category : categories) {
-            Map<String, Object> categoryData = new HashMap<>();
-            categoryData.put("name", category.getName());
-            categoryData.put("count", questionRepository.countByCategory_Id(category.getId()));
-            categoryStats.put(category.getId(), categoryData);
+    /**
+     * Fetch solution counts for multiple questions in a single aggregation query
+     * 
+     * MongoDB Aggregation Pipeline:
+     * 1. Match: Filter solutions where questionId is in the provided list
+     * 2. Group: Group by questionId and count documents in each group
+     * 
+     * Example:
+     * Input: ["id1", "id2", "id3"]
+     * Output: {"id1": 5, "id2": 3, "id3": 0}
+     * 
+     * This reduces 20 separate count queries to 1 aggregation query
+     */
+    private Map<String, Integer> getSolutionCountsForQuestions(List<String> questionIds) {
+        if (questionIds.isEmpty()) {
+            return new HashMap<>();
         }
-        counts.put("byCategory", categoryStats);
+
+        // MongoDB Aggregation Pipeline
+        Aggregation aggregation = Aggregation.newAggregation(
+                // Stage 1: Match solutions where questionId is in our list
+                Aggregation.match(Criteria.where("questionId").in(questionIds)),
+                // Stage 2: Group by questionId and count
+                Aggregation.group("questionId").count().as("count"));
+
+        // Execute aggregation
+        AggregationResults<org.bson.Document> results = mongoTemplate.aggregate(
+                aggregation,
+                "solutions", // collection name
+                org.bson.Document.class);
+
+        // Convert results to Map
+        Map<String, Integer> counts = new HashMap<>();
+        for (org.bson.Document doc : results.getMappedResults()) {
+            String questionId = doc.getString("_id"); // _id is the grouped field (questionId)
+            Integer count = doc.getInteger("count"); // FIXED: use getInteger instead of getLong
+            counts.put(questionId, count);
+        }
 
         return counts;
     }
 
-    public List<QuestionDTO> searchQuestions(String searchTerm) {
-        List<Question> questions = questionRepository.searchByTitleOrStatement(searchTerm);
-        return questions.stream()
-                .map(QuestionDTO::fromEntity)
-                .toList();
+    /**
+     * Get question by ID for authenticated users
+     * Globally cached
+     */
+    @Cacheable(value = "questionDetail", key = "#questionId")
+    public QuestionDTO getQuestionById(String questionId) {
+        System.out.println("CACHE MISS: Fetching question detail for: " + questionId);
+
+        Question question = questionRepository.findById(questionId)
+                .orElseThrow(() -> new RuntimeException("Question not found with id: " + questionId));
+
+        return QuestionDTO.fromEntity(question);
     }
 
-    public List<QuestionDTO> getQuestionsByCreator(String creatorId) {
-        List<Question> questions = questionRepository.findByCreatedBy_Id(creatorId);
-        return questions.stream()
-                .map(QuestionDTO::fromEntity)
-                .toList();
+    @Cacheable(value = "questionsMetadata")
+    public QuestionsMetadataDTO getQuestionsMetadata() {
+        System.out.println("CACHE MISS: Fetching questions metadata");
+
+        List<Question> allQuestions = questionRepository.findAll();
+        Map<String, QuestionsMetadataDTO.QuestionMetadata> metadataMap = new HashMap<>();
+
+        for (Question question : allQuestions) {
+            QuestionsMetadataDTO.QuestionMetadata metadata = new QuestionsMetadataDTO.QuestionMetadata(
+                    question.getId(),
+                    question.getTitle(),
+                    question.getLevel(),
+                    question.getCategoryId());
+            metadataMap.put(question.getId(), metadata);
+        }
+
+        QuestionsMetadataDTO result = new QuestionsMetadataDTO();
+        result.setQuestions(metadataMap);
+
+        return result;
     }
 }
